--- a/code/mab_demo.ipynb
+++ b/code/mab_demo.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "426998a1",
+   "id": "4d1031d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c8151d6",
+   "id": "e3c19d8a",
    "metadata": {},
    "source": [
     "### Non-contextual bandit problem (trivial state).\n",
@@ -25,17 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "e22a7d37",
+   "execution_count": 2,
+   "id": "f088343a",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_noncon_reward(action):\n",
-    "    if action == 'a1':\n",
+    "    if action == 'a0':\n",
     "        return np.random.binomial(1, 0.03)\n",
-    "    elif action == 'a2':\n",
+    "    elif action == 'a1':\n",
     "        return np.random.binomial(1, 0.02)\n",
-    "    elif action == 'a3' or action == 'a4':\n",
+    "    elif action == 'a2' or action == 'a3':\n",
     "        return np.random.binomial(1, 0.01)\n",
     "    else:\n",
     "        raise ValueError('Unrecognized action.')"
@@ -43,8 +43,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "bd0e6c7a",
+   "execution_count": 3,
+   "id": "3cda61e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e87361be",
+   "id": "18aea741",
    "metadata": {},
    "source": [
     "#### Try number 1 - random serving:"
@@ -61,32 +61,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "03215cf4",
+   "execution_count": 4,
+   "id": "745755f1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Profit:  1797\n"
+      "Profit:  1762\n",
+      "{'a0': 24921, 'a1': 25077, 'a2': 25198, 'a3': 24804}\n"
      ]
     }
    ],
    "source": [
     "rewards = []\n",
+    "action_cnt_dict = {'a0': 0, 'a1': 0, 'a2': 0, 'a3': 0}\n",
     "\n",
     "for i in range(num_sessions):\n",
-    "    action = np.random.choice(['a1', 'a2', 'a3', 'a4'])\n",
+    "    action = np.random.choice(['a0', 'a1', 'a2', 'a3'])\n",
+    "    action_cnt_dict[action] += 1\n",
     "    rewards.append(get_noncon_reward(action))\n",
     "    \n",
     "cumulative_reward = np.array(rewards).sum()\n",
-    "print('Profit: ', cumulative_reward)"
+    "print('Profit: ', cumulative_reward)\n",
+    "print(action_cnt_dict)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "74602122",
+   "id": "79aabbb8",
    "metadata": {},
    "source": [
     "#### Try number 2 - explore first:"
@@ -94,16 +98,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "id": "c797058f",
+   "execution_count": 5,
+   "id": "a1991d2e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Profit:  2559\n",
-      "Best learned action:  a1\n"
+      "Profit:  2664\n",
+      "Best learned action:  a0\n",
+      "{'a0': 81202, 'a1': 6330, 'a2': 6227, 'a3': 6241}\n"
      ]
     }
    ],
@@ -111,11 +116,13 @@
     "exploration_budget = num_sessions/4\n",
     "learned = False\n",
     "rewards = []\n",
-    "history = {'a1': [], 'a2': [], 'a3': [], 'a4': []}\n",
+    "history = {'a0': [], 'a1': [], 'a2': [], 'a3': []}\n",
+    "action_cnt_dict = {'a0': 0, 'a1': 0, 'a2': 0, 'a3': 0}\n",
     "\n",
     "for i in range(num_sessions):\n",
     "    if (i < exploration_budget): #explore here!\n",
-    "        action = np.random.choice(['a1', 'a2', 'a3', 'a4'])\n",
+    "        action = np.random.choice(['a0', 'a1', 'a2', 'a3'])\n",
+    "        action_cnt_dict[action] += 1\n",
     "        reward = get_noncon_reward(action)\n",
     "        rewards.append(reward)\n",
     "        # add to history\n",
@@ -132,18 +139,22 @@
     "                    best_action = a\n",
     "            learned = True\n",
     "            rewards.append(get_noncon_reward(best_action))\n",
+    "            action_cnt_dict[best_action] += 1\n",
     "        else:\n",
     "            #be greedy!\n",
     "            rewards.append(get_noncon_reward(best_action))\n",
+    "            action_cnt_dict[best_action] += 1\n",
+    "\n",
     "            \n",
     "cumulative_reward = np.array(rewards).sum()\n",
     "print('Profit: ', cumulative_reward)\n",
-    "print('Best learned action: ', best_action)"
+    "print('Best learned action: ', best_action)\n",
+    "print(action_cnt_dict)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f7c7568d",
+   "id": "3051fe93",
    "metadata": {},
    "source": [
     "#### Thompson Sampling (simple but optimal bandit algorithm)"
@@ -151,15 +162,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "id": "f3d208c5",
+   "execution_count": 6,
+   "id": "c8dd957d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Profit:  2956\n"
+      "Profit:  2896\n",
+      "{'a0': 95494, 'a1': 3198, 'a2': 334, 'a3': 974}\n"
      ]
     }
    ],
@@ -167,12 +179,14 @@
     "rewards = []\n",
     "successes = [1,1,1,1]\n",
     "failures = [1,1,1,1]\n",
-    "action_dict = {0: 'a1', 1: 'a2', 2: 'a3', 3: 'a4'}\n",
+    "action_dict = {0: 'a0', 1: 'a1', 2: 'a2', 3: 'a3'}\n",
+    "action_cnt_dict = {'a0': 0, 'a1': 0, 'a2': 0, 'a3': 0}\n",
     "\n",
     "for i in range(num_sessions):\n",
     "    beta_samples = np.random.beta(successes, failures)\n",
     "    action_index = np.argmax(beta_samples)\n",
     "    action = action_dict[action_index]\n",
+    "    action_cnt_dict[action] += 1\n",
     "    reward = get_noncon_reward(action)\n",
     "    rewards.append(reward)\n",
     "    #learn\n",
@@ -181,13 +195,14 @@
     "    \n",
     "    \n",
     "cumulative_reward = np.array(rewards).sum()\n",
-    "print('Profit: ', cumulative_reward)"
+    "print('Profit: ', cumulative_reward)\n",
+    "print(action_cnt_dict)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61eb4f52",
+   "id": "69950d31",
    "metadata": {},
    "outputs": [],
    "source": []
